# bin

./: .gitignore  273  2chimg  CLAUDE.md  Helianthus_annuus  README.md  SKILL.md  abema  aeg  aidoc  amesh  anical  anidb  anidb-search  animetick  atcoder-submit  atq  backtick  beamer  bun  ca  calendar  choose  clip  clone  codeforces  codegen  codegpt  codex  colors256  commit-message  cpptemp  cropimport  danbooru-tags  danbooru-tags-complete  deepl  diffminus  docker  doujin-search  ehentai  (+125 more)
.claude/: settings.local.json
shot.app/Contents/: Info.plist  document.wflow
twitter/: .gitignore  README.md
twitter/tenki/: .gitignore  livedoor.sh  main  nine.sh  plot.gp
