[project]
name = "bin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "black>=25.1.0",
    "click>=8.1.8",
    "httpx>=0.24.0",
    "isort>=6.0.1",
    "pyright>=1.1.400",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "ruff>=0.13.0",
    "urllib3>=2.2.0",
    "watchgod>=0.8.2",
    "xai-sdk>=1.6.1",
]
